@@ -1,3 +1,7 @@
+28/10/08 Julien Dutheil
+* New Numerical cross derivatives (3 points method only).
+* New functions in NumTools to compute Hessian matrices.
+
 21/07/08 -*- Version 1.5.0 -*-
 
 04/04/08 Sylvain Gaillard
